--- a/components/badge.mustache
+++ b/components/badge.mustache
@@ -4,8 +4,8 @@
     </div>
 
     <div class="profile-info">
-        <span class="profile-name">Danil Sorokin</span>
-        <span class="profile-readers">19 readers</span>
-        <span class="profile-location">Odessa, Ukraine</span>
+        <span class="profile-name">{{user.name}}</span>
+        <span class="profile-readers">@{{user.login}}</span>
+
     </div>
 </div>
