--- a/components/create.mustache
+++ b/components/create.mustache
@@ -7,7 +7,7 @@
         <div class="new-post-editor"></div>
     </div>
     
-    <div class="new-post-control">
+    <div class="new-post-control post-action">
         <i class="fa fa-camera file-picker" aria-hidden="true" style="color: #373737"></i>
     </div>
 
