--- a/public/styles/post.component.css
+++ b/public/styles/post.component.css
@@ -26,7 +26,8 @@
 
 .post-body {
     margin-top: 15px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Signika;
+    /*font-family: Georgia, 'Times New Roman', Times, serif;*/
 }
 
 .post-dialog {
@@ -59,6 +60,7 @@
     line-height: 25px;
     color: #343c4a;
     border-radius: 2px;
+    font-family: Signika;
 }
 
 .post-action:hover {
@@ -67,4 +69,36 @@
 
 .post-go {
     margin-right: 0 !important;
+}
+
+
+.purchase-block {
+    /*margin: 30px 0;*/
+}
+
+.purchase-link {
+    margin: auto;
+    width: 100%;
+    height: 50px;
+background-color: #E24C89  /* fallback for old browsers */  /* Chrome 10-25, Safari 5.1-6 */;
+
+    color: white;
+    line-height: 50px;
+    display: block;
+    text-align: center;
+    font-size: 12px;
+
+    text-transform: uppercase;
+    font-family: Signika;
+    /*font-weight: lighter;*/
+    
+    letter-spacing: 3px;
+}
+
+.purchase-link:hover {
+    transition: color, background-color 0.2s;
+    background-color: #F7F7F7;
+    color: #1D3C50;
+    text-decoration: none;
+
 }
