add image modification in posts

--- a/components/post.mustache
+++ b/components/post.mustache
@@ -49,6 +49,7 @@
         </div>
 
         <span style="display: none" class="post-commit pointer post-action">Save Changes</span>
+        <span style="display: none" class="post-change-image pointer post-action">Add Image</span>
         <span style="display: none" class="post-cancel pointer post-action">Cancel</span>
         {{/user.admin}}
         <span style="" class="post-go pointer post-action pull-right" showif="main">Go to post</span>
