add books editing, images

--- a/components/bookcreate.mustache
+++ b/components/bookcreate.mustache
@@ -8,6 +8,9 @@
     </div>
     
     <div class="new-book-control">
+        <span class="post-action">
+            <i class="fa fa-camera book-file-picker" aria-hidden="true" style="color: #373737"></i>
+        </span>
         <span class="post-action book-attach-link" aria-hidden="true" style="color: #373737"><span class="text">Insert a buy link</span><i class="fa fa-check book-attach-ok" aria-hidden="true" style="display:none;"></i></span>
     </div>
 
