--- a/public/styles/badge.component.css
+++ b/public/styles/badge.component.css
@@ -22,6 +22,10 @@
     margin-top: 20px;
 }
 
+.profile-badge .profile-image {
+    position: relative;
+}
+
 .profile-badge .profile-image img {
     width: 50px;
     height: 50px;
